--- a/src/components/TaskBoardComponent/TaskBoard.css
+++ b/src/components/TaskBoardComponent/TaskBoard.css
@@ -4,6 +4,17 @@
     background-color: #EEEDED;
 }
 
+.TaskHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+}
+
+.AddButton {
+    width: 100px;
+    font-size: 25px;
+}
+
 .TaskList {
     padding: 0px 30px;
 }
