--- a/src/components/TaskComponent/Task.css
+++ b/src/components/TaskComponent/Task.css
@@ -4,4 +4,7 @@
     border-radius: 15px;
     background-color: white;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
